tests/fixtures/valid/print_no_newline.mmd
flowchart TD
    Start --> A[print 'Hello, ']
    A --> B[println 'World!']
    B --> End
