tests/fixtures/invalid/condition_no_label.mmd
flowchart TD
    Start --> A{true?}
    A --> B[println 'yes']
    A -->|No| C[println 'no']
    B --> End
    C --> End
